Overflow fix

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -12,6 +12,7 @@
 // Main Body
 .td-home {
   background-color: $dark;
+  overflow-x: hidden;
 }
 // .td-cover-block--height-full {
 //   min-height: 90vh;
